tests/functional2/lang/assets/test_lang_infra/runner_ef.err.exp
error: syntax error, unexpected end of file, expecting '}' to end attribute set
       at /pwd/in.nix:1:2:
            1| {
             |  ^
